﻿3/32/2015 0.8.9.1b-rv2
  Dependency Updated: Forge 10.13.2.1291
  Dependency Updated: Thaumcraft 4.2.3.5
  Dependency Updated: AE2 rv2 beta 18
  Fixes #145: Blocks now make sure their tile entity is valid before using them.
  Fixes #143: Removed essentia types are now properly ignored on launch.
  Fixes #133: Assembler AE-network connection initialization now protected.
  Merged language translation updates.
  Fixed ItemFocusAEWrench init bug
  Aspect registration is now protected from causing a crash.
  

2/1/2015 0.8.9.0b-rv2
  Finished wrench focus recipe and lore
  Fixes #126: Added support for AE2-rv2-beta8
  
1/16/2015 0.8.9.0b-rv2
  Added support for cable parts to wrench focus.

1/15/2015 0.8.9.0b-rv2
  Fixes #122: Assembler will now connect to a network with a security terminal.
  Fixes #123: Added wrench focus.
  Began work on Essentia vibration chamber.

1/13/2015 0.8.8.4b-rv2
  Added forge version information to dependencies.
  Clarified permission API.
  Fixes #117: Added config option for gearbox models.
  Fixes #120: Assembler recipe now properly accepts a crafted scepter.
  Fixes #119: Assembler saves core and upgrades when wrenched.
  Fixes #118: Assembler now drops upgrades when broken.
  Fixes #114: Assembler now has slots for vis discount armor and inherits the scepter's vis discount.
  Bugfix: Assembler power calculation fixed.
  Bugfix: Fixed Assembler's GUI shift+click for upgrade cards.
  Reduced network overhead in assembler.

1/11/2015 0.8.8.1b-rv2
  Corrected model placement when player is holding it.
  Fixes #115: Arcane recipes are now fully validated.
  Decreased the time period between vis checks in the A.C.T.(wands will start charging sooner)
  Fixes #113: The knowledge inscriber can now be rotated with an AE wrench.

1/10/2015 0.8.8.0b-rv2
  Added recipes and lore for inscriber and assembler.
  Disabled craftable items in A.C.T.
  Added localization registry.
  Moved all ThE displayable strings to localization registry.