@@ -5,6 +5,7 @@
   Fixes #145: Blocks now make sure their tile entity is valid before using them.
   Fixes #143: Removed essentia types are now properly ignored on launch.
   Fixes #133: Assembler AE-network connection initialization now protected.
+  Fixes #129: Wrench focus disabled when quartz wrench has been disabled.
   Merged language translation updates.
   Fixed ItemFocusAEWrench init bug
   Aspect registration is now protected from causing a crash.
